# youtube-stock-playlist-watcher

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: watch.yml
data/: processed_videos.json
src/playlist_watcher/: __init__.py  analyzer.py  config.py  emailer.py  main.py  state.py  transcript.py  youtube.py
